@@ -14,6 +14,7 @@ Bugfixes:
 - fixed bug for Remoting requests without parameters (Jira APPSERVER-147)
 - fixed issue with stop/start of war in Tomcat (Jira APPSERVER-155)
 - fixed handshake reply for Flash Player 9 Update 3
+- IMetaData supports fractional framerates (Jira APPSERVER-157)
 
 
 Red5 0.6.1  (2007-05-23)
